# Python_Decoradores

./: .gitignore  README.md  exemplo_func_soma.py  logging_example.py  pyproject.toml  utils_log.py
