[tool.poetry]
name = "python-decoradores"
version = "0.1.0"
description = ""
authors = ["villani31 <iamthiagovillani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
